--- a/apmq/package.json
+++ b/apmq/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "axois": "^0.0.1-security",
+    "better-react-mathjax": "^2.0.3",
     "bootstrap": "^5.3.3",
     "mathjax-react": "^2.0.1",
     "modules": "^0.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
